# divan

./: .gitignore  LICENSE  README.en.md  README.md  __init__.py  config.py  pyproject.toml
api/: server.py
cli/: __init__.py  app.py
clients/: __init__.py  anayasa.py  base.py  base_scraper.py  bddk.py  bedesten.py  btk.py  emsal.py  factory.py  gib.py  kik.py  kvkk.py  mevzuat.py  rekabet.py  sayistay.py  sigorta.py  uyusmazlik.py
core/: __init__.py  enums.py  exceptions.py  interfaces.py  models.py
docs/: API_REFERENCE.md  ARCHITECTURE.md  CLIENT_DEVELOPMENT.md  EXAMPLE_USAGE.md
infrastructure/: __init__.py  cache.py  circuit_breaker.py  http_client.py  rate_limiter.py
mcp/: __init__.py  server.py
services/: __init__.py  document.py  export.py  search.py
services/semantic/: expansion.py  reranker.py
tests/: ast_parser.py  eval_reranker.py  run_tests.py  scratch_inspect.py  scratch_test_emsal_and.py  scratch_test_sort.py  test_all_clients.py  test_mcp_direct.py  test_yargitay.py
