[project]
name = "divan"
version = "0.1.0"
description = "Divan: Enterprise-Grade Türk Hukuk Araştırma MCP Sunucusu"
authors = [
    { name = "Divan Contributors" }
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "httpx>=0.27.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "fastmcp>=0.1.0",
    "markitdown>=0.0.1",
    "fastapi>=0.115.0",
    "uvicorn>=0.31.0",
    "typer>=0.12.0",
    "rich>=13.9.0",
    "python-docx>=1.1.0",
    "networkx>=3.0.0",
]

[project.scripts]
divan = "divan.cli.app:main"
divan-mcp = "divan.mcp.server:app.run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.hatch.build.targets.wheel.sources]
"" = "divan"

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
